<resources>
    <string name="app_name">QUIZ</string>
    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Again_Password">Again Password</string>
    <string name="Clear">Clear</string>
    <string name="Registeration">Click for Registration</string>
    <string name="Register">Register</string>
    <string name="Image">Image</string>
    <string name="Name">Name</string>
    <string name="Surname">Surname</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Submit">Submit</string>
    <string name="Back">Back</string>
    <string name="UserInformation">User Information</string>
    <string name="Test">Test</string>
    <string name="notChangeError">You do not do any change</string>
    <string name="FillAllPlacesError">Fill All Place</string>
    <string name="MissMatchPasswordError">Mismatch password</string>
    <string name="ValidEmailWarning">Enter valid email</string>
    <string name="UsingEmailWarning">This email address using other person</string>
    <string name="WrongEmailOrPassword">Your email or password wrong</string>
    <string name="Error">An Error Occur</string>
    <string name="ChangeWarning">You dont save your changes</string>
    <string name="Continue">Continue</string>
    <string name="Categories">Categories</string>
    <string name="Animal">Animal</string>
    <string name="City">City</string>
    <string name="Sport">Sport</string>
    <string name="History">History</string>
    <string name="General">General</string>
    <string name="Space"> </string>
    <string name="Questions">Questions</string>
    <string name="Ask">Do yo want to leave quiz?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="UnexpectedlyTerminated">Activity unexpectedly terminated</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="Change">Changes Saved</string>
    <string name="Result">Result</string>
    <string name="RightAnswer">Right Answer:</string>
    <string name="WrongAnswer">Wrong Answer:</string>
    <string name="EmptyAnswer">Empty Answer:</string>
    <string name="SuccessfulRate">Successful Rate:</string>
    <string name="SelectWarning">Please Select a Button</string>
    <string name="AskGoLogin">Do you want to leave test?</string>

</resources>
