<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/register"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Register"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/red"/>

    <LinearLayout
        android:id="@+id/linearLayoutRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Name"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:backgroundTint="@color/orange"
            android:layout_weight="0.5"
            android:maxLength="12"/>

        <EditText
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Surname"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:backgroundTint="@color/orange"
            android:layout_weight="0.5"
            android:maxLength="12"/>

    </LinearLayout>

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutRegister"
        android:hint="@string/Phone_Number"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:backgroundTint="@color/orange"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_number"
        android:hint="@string/Email"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/orange"/>

    <LinearLayout
        android:id="@+id/linearLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:backgroundTint="@color/orange"
            android:layout_weight="0.5"
            android:maxLength="12"/>

        <EditText
            android:id="@+id/passwordAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Again_Password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:backgroundTint="@color/orange"
            android:layout_weight="0.5"
            android:maxLength="12"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayoutPassword"
        android:layout_marginTop="20dp">

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Back"
                android:background="@color/acik_yesil"
                android:layout_weight="0.5"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"/>

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Submit"
                android:background="@color/turkuaz"
                android:layout_weight="0.5"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"/>
    </LinearLayout>

</RelativeLayout>