<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.hw1.MainActivity">

    <TextView
        android:id="@+id/login"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Login"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/red"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:hint="@string/Email"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/orange"/>

    <ImageView
        android:id="@+id/emailImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/email"
        android:layout_alignParentStart="true"
        android:background="@mipmap/person"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/Image"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:hint="@string/Password"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        android:inputType="textPassword"
        android:backgroundTint="@color/orange"/>

    <ImageView
        android:id="@+id/passwordImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/password"
        android:layout_alignParentStart="true"
        android:background="@mipmap/password"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/Image"/>

    <LinearLayout
        android:id="@+id/linearLayoutLogin"
        android:layout_marginTop="40dp"
        android:layout_below="@id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clear_button"
            android:text="@string/Clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:background="@color/acik_yesil"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/login_button"
            android:text="@string/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/turkuaz"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

    <TextView
        android:id="@+id/registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutLogin"
        android:text="@string/Registeration"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textColor="@color/yellow"/>

</RelativeLayout>
