<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/userInformation"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/UserInformation"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/red"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:id="@+id/linearLayoutInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userInformation"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.5"
            android:maxLength="12"
            android:textStyle="bold"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="0.5"
            android:maxLength="12"
            android:textStyle="bold"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/black"/>

    </LinearLayout>

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutInformation"
        android:layout_marginTop="23dp"
        android:layout_toEndOf="@+id/imageView"
        android:backgroundTint="@color/orange"
        android:hint="@string/Phone_Number"
        android:inputType="phone"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="40dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="23dp"
        android:layout_toEndOf="@+id/imageView2"
        android:backgroundTint="@color/orange"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="40dp"/>

    <LinearLayout
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/email"
        android:layout_marginTop="40dp">

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Submit"
            android:background="@color/acik_yesil"
            android:layout_weight="0.5"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Test"
            android:background="@color/turkuaz"
            android:layout_weight="0.5"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/phone_number"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/Image"
        app:srcCompat="@mipmap/telephone" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignTop="@+id/email"
        app:srcCompat="@mipmap/mail"
        android:contentDescription="@string/Image"/>
</RelativeLayout>