<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TextView
            android:id="@+id/login"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Questions"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/red"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"/>

        <LinearLayout
            android:id="@+id/linearLayoutChoose"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back_button"
                android:text="@string/Back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:background="@color/acik_yesil"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/result_button"
                android:text="@string/Result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@color/turkuaz"
                style="?android:attr/borderlessButtonStyle"/>

        </LinearLayout>
    </TableLayout>
</ScrollView>